[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/actors/player/playerButton.gd" type="Script" id=1]
[ext_resource path="res://src/assets/Chimbinha de frente.png" type="Texture" id=2]
[ext_resource path="res://src/actors/player/CanvasLayerTelaPC.gd" type="Script" id=3]
[ext_resource path="res://src/assets/background.png" type="Texture" id=4]
[ext_resource path="res://src/actors/player/playerButtonNode.gd" type="Script" id=5]
[ext_resource path="res://src/fonts/CaviarDreams.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 69.5, 59 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 76.5, 65.75 )

[node name="playerButtonNode" type="Node2D"]
script = ExtResource( 5 )

[node name="CanvasPanel" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasPanel"]
visible = false
margin_left = 540.0
margin_top = 523.0
margin_right = 1152.0
margin_bottom = 699.0

[node name="Left" type="Button" parent="CanvasPanel/Panel"]
margin_left = 32.0
margin_top = 26.0
margin_right = 201.0
margin_bottom = 131.0
text = "Esquerda"

[node name="Jump" type="Button" parent="CanvasPanel/Panel"]
margin_left = 225.0
margin_top = 28.0
margin_right = 389.0
margin_bottom = 128.0
text = "Pular"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Button" parent="CanvasPanel/Panel"]
margin_left = 413.0
margin_top = 30.0
margin_right = 578.0
margin_bottom = 127.0
text = "Direita"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLabel" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLabel"]
margin_left = 7.0
margin_top = 2.0
margin_right = 204.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasBackground" type="CanvasLayer" parent="."]
layer = -100

[node name="TextureRect" type="TextureRect" parent="CanvasBackground"]
margin_left = -7.0
margin_right = 1913.0
margin_bottom = 1080.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="painelControle" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_left = 92.0
margin_top = 527.0
margin_right = 371.0
margin_bottom = 699.0
color = Color( 0.176471, 0.168627, 0.168627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="telaPC" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 98.0
margin_top = 533.0
margin_right = 280.0
margin_bottom = 699.0
max_lines_visible = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clear" type="Button" parent="CanvasLayer"]
visible = false
margin_left = 300.0
margin_top = 586.0
margin_right = 354.0
margin_bottom = 636.0
text = "Limpar"

[node name="playerButton" type="KinematicBody2D" parent="."]
collision_mask = 542
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="playerButton"]
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = 0
limit_top = 0
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="Sprite" type="Sprite" parent="playerButton"]
scale = Vector2( 0.652344, 0.542969 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerButton"]
position = Vector2( 4.5, -2 )
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="playerButton"]
collision_layer = 256
collision_mask = 712

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerButton/Hurtbox"]
position = Vector2( 3.5, -9.25 )
shape = SubResource( 2 )

[connection signal="pressed" from="CanvasPanel/Panel/Left" to="CanvasLayer" method="_on_Left_pressed"]
[connection signal="pressed" from="CanvasPanel/Panel/Left" to="playerButton" method="_on_Left_pressed"]
[connection signal="pressed" from="CanvasPanel/Panel/Jump" to="CanvasLayer" method="_on_Jump_pressed"]
[connection signal="pressed" from="CanvasPanel/Panel/Jump" to="playerButton" method="_on_Jump_pressed"]
[connection signal="pressed" from="CanvasPanel/Panel/Right" to="CanvasLayer" method="_on_Right_pressed"]
[connection signal="pressed" from="CanvasPanel/Panel/Right" to="playerButton" method="_on_Right_pressed"]
[connection signal="pressed" from="CanvasLayer/Clear" to="CanvasLayer" method="_on_Clear_pressed"]
[connection signal="area_entered" from="playerButton/Hurtbox" to="playerButton" method="_on_Hurtbox_area_entered"]
